--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 alembic==0.8.6
 amqp==1.4.9
+aniso8601==1.1.0
 anyjson==0.3.3
 arrow==0.8.0
 billiard==3.3.0.23
 celery==3.1.23
 click==6.6
 Flask==0.11.1
+Flask-JWT==0.3.2
 Flask-Migrate==1.8.0
+Flask-RESTful==0.3.5
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 itsdangerous==0.24
@@ -14,6 +17,7 @@ Jinja2==2.8
 kombu==3.0.35
 Mako==1.0.4
 MarkupSafe==0.23
+PyJWT==1.4.0
 PyMySQL==0.7.4
 python-dateutil==2.5.3
 python-editor==1.0.1
