--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ celery==3.1.23
 click==6.6
 Flask==0.11.1
 Flask-JWT==0.3.2
+flask-marshmallow==0.6.2
 Flask-Migrate==1.8.0
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
@@ -17,6 +18,8 @@ Jinja2==2.8
 kombu==3.0.35
 Mako==1.0.4
 MarkupSafe==0.23
+marshmallow==2.7.3
+marshmallow-sqlalchemy==0.8.1
 PyJWT==1.4.0
 PyMySQL==0.7.4
 python-dateutil==2.5.3
